--- a/vsse.css
+++ b/vsse.css
@@ -11,8 +11,6 @@
     --navbarwidthshrunk:2px;
     --sidebarwidth:100px;
 
-    --gridFancy:'"body1 body1 body2" "body3 body4 body2" "body3 body5 body6" "body7 body5 body8" "body9 body9 body9"';
-    
     --bgcolorheaderad:black;
     --bgcolorheader:rgb(75, 121, 212);
     --bgcolorheadernav:transparent;
@@ -91,7 +89,7 @@ body{
 
 
 /* for mobile */
-@media only screen and (max-width: 320px){
+@media only screen and (min-width: 320px) and (max-width: 767px){
 
 /* invisible div */
 #vsse_headeradyourad{
@@ -124,6 +122,7 @@ body{
 
 /* header */
 header{
+    /* width:100%; */
     display:flex;
     flex-direction:column;
     /* height:var(--headerheight); */
@@ -1307,9 +1306,12 @@ table, th, td{
 
 
 
-/* for pad */
-/*@media only screen and (min-width: 320px){
-}*/
+/* for tablet  and mobile-landscape */
+/* @media only screen and (min-width: 481px) and (max-width: 767px){
+
+#vsse_headerad{
+    display:none;
+} */
 
 
 
