--- a/vsse.css
+++ b/vsse.css
@@ -89,8 +89,8 @@ body{
 
 
 /* for mobile */
-@media only screen and (min-width: 320px) and (max-width: 767px){
-
+/* @media only screen and (min-width: 320px) and (max-width: 767px){ */
+@media only screen and (max-width: 767px){
 /* invisible div */
 #vsse_headeradyourad{
     display:none;
