--- a/vsse.css
+++ b/vsse.css
@@ -681,7 +681,7 @@ header{
     
     border-style: solid;
     border-color:rgba(255,0,0,1);
-    width:20%;    
+    width:25%;    
 
     animation:slidei 3s forwards ease-out 1.5s, irise 2s forwards ease-in 4.5s;
 }
@@ -1245,7 +1245,7 @@ header{
 
 #vsse_bodywedidimgcont{
     width:80%;
-    height:400px;
+    /* height:400px; */
     /* background:var(--bgcolorgradient);*/
     margin:10% auto;
     overflow: hidden; 
@@ -1765,7 +1765,7 @@ table, th, td{
         
         /* header */
         header{
-            width:100%;
+            /* width:100%; */
             display:flex;
             flex-direction:column;
             /* height:var(--headerheight); */
