--- a/vas.css
+++ b/vas.css
@@ -111,8 +111,12 @@ nav div:hover{
     font-style:bold;
     color:darkred;
     text-shadow: 1px 1px 2px gray;
+    box-shadow: 1px 1px 2px gray;
 }
 
+.navdiffitem:hover svg{
+    box-shadow: 0px 0px 3px gray;
+}
 /* #main_content nav div{
     align-self: center;
     justify-self: flex-end;
